<resources>
    <string name="app_name">NYT Based API Android App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="byline">Byline</string>
    <string name="published_date">Published Date</string>
    <string name="abstrac">Abstract</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="if_you_don_t_have_an_account_click_here_to_register">If you don\'t have an account, click here to register</string>
</resources>